--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="learnedWordsList">ÖĞRENİLMİŞ KELİMELER LİSTESİ</string>
-    <string name="notLearnedWordsList">ÖĞRENİLMEMİŞ KELİMELER LİSTESİ</string>
+    <string name="learnedWordsList">ÖĞRENİLMİŞ\nKELİMELER\nLİSTESİ</string>
+    <string name="notLearnedWordsList">ÖĞRENİLMEMİŞ\nKELİMELER\nLİSTESİ</string>
 
-    <string name="learnedWord">ÖĞRENİLMİŞ KELİME TEKRARI</string>
-    <string name="notLearnedWord">KELİME ÖĞREN</string>
+    <string name="learnedWord">ÖĞRENİLMİŞ\nKELİME\nTEKRARI</string>
+    <string name="notLearnedWord">KELİME\nÖĞREN</string>
 
     <string name="notFoundLearnedWord">Öğrenilmiş Kelime Bulunamadı</string>
     <string name="notFoundNotLearnedWord">Tebrikler Bütün Kelimeler Öğrenildi</string>
